# presidio

./: .dockerignore  Dockerfile  Makefile  README.md  app.py  compose.yml  logging.ini  otel.py  pyproject.toml  start.sh
.github/: renovate.json
.github/workflows/: check.yml  publish.yml
analyzer/: app.py  logging.ini
anonymizer/: app.py  logging.ini
conf/: nlp.yaml  recognizers.yaml
tests/: compose.yml  e2e_test.sh  test_app.py
